--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "styling",
     "node-sass"
   ],
-  "authors": [
-    "Jimmy King <hello@jimmyking.me> (http://jimmyking.me)",
-    "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)"
-  ],
+  "author": "Jimmy King <hello@jimmyking.me> (http://jimmyking.me)",
   "maintainers": [
     "Jimmy King <hello@jimmyking.me> (https://github.com/jking90)"
   ],
@@ -38,7 +35,9 @@
     "url": "https://github.com/jking90/docpad-plugin-nodesass.git"
   },
   "engines": {
-    "node": ">=0.10.0",
+    "node": ">=0.10"
+  },
+  "peerDependencies": {
     "docpad": ">=6.3 <7"
   },
   "dependencies": {
@@ -47,8 +46,7 @@
   },
   "devDependencies": {
     "coffee-script": "~1.6.2",
-    "docpad": ">=6.37 <7",
-    "joe-reporter-console": "~1.2.1"
+    "docpad": ">=6.37 <7"
   },
   "license": "MIT",
   "main": "./out/sass.plugin.js",
